--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "test"
+    "test": "jasmine",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json-query": "^2.2.2"
+  },
+  "devDependencies": {
+    "jasmine": "^4.4.0",
+    "jasmine-auto-spies": "^6.9.9"
   }
 }
