--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -13,9 +13,8 @@ runs:
   - name: NPM Install
     shell: bash
     run : |
-      cd api
       npm install
-    working-directory: ${{ inputs.workingDirectory }}
+    working-directory: ./api
 
 # TODO
   # - name: Lint
@@ -26,6 +25,5 @@ runs:
   - name: Unit Test
     shell: bash
     run: |
-      cd api
       npm test
-    working-directory: ${{ inputs.workingDirectory }}
+    working-directory: ./api
