--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "jasmine",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "jasmine": "^4.4.0",
-    "jasmine-auto-spies": "^6.9.9"
+    "jasmine-auto-spies": "^6.9.9",
+    "nodemon": "^2.0.20"
   }
 }
