--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jasmine-console-reporter": "^3.1.0",
     "json-query": "^2.2.2"
   },
   "devDependencies": {
