--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jasmine-console-reporter": "^3.1.0",
-    "json-query": "^2.2.2"
+    "json-query": "^2.2.2",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "jasmine": "^4.4.0",
