--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -1,6 +1,6 @@
 name: DEV - CI
 
-on: 
+on:
   workflow_dispatch:
 
 jobs:
@@ -8,23 +8,9 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
     environment: dev
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: NPM Install
-      shell: bash
-      run : |
-        cd api
-        npm install
-
-    # TODO
-      # - name: Lint
-      #   shell: bash
-      #   run: yarn run lint
-
-    - name: Unit Test
-      shell: bash
-      run: |
-        cd api
-        npm test
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/actions/test
+        with:
+          workingDirectory: api
