--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "main": "src/server.js",
   "scripts": {
     "test": "jasmine",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,8 @@
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-plugin-jasmine": "^4.1.3",
     "jasmine": "^4.4.0",
     "jasmine-auto-spies": "^6.9.9",
     "nodemon": "^2.0.20"
