added terraform apply

--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -40,3 +40,7 @@ jobs:
       - name: Terraform Plan
         run: terraform plan
         working-directory: ./infrastructure
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
+        working-directory: ./infrastructure
