--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -22,7 +22,6 @@ jobs:
       ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
       ARM_SUBSCRIPTION_ID: ${{secrets.AZUIRE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZUIRE_TENANT_ID}}
-      ENVIROMENT: dev
 
     steps:
       - uses: actions/checkout@v3
@@ -33,7 +32,9 @@ jobs:
       - name: Terraform init
         run: terraform init
         working-directory: ./infrastructure
-      
+        env: 
+          ENVIROMENT: dev
+
       - name: Terraform Format
         run: terraform fmt -check
         working-directory: ./infrastructure
