--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -31,19 +31,29 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform init
-        run: terraform init
-        working-directory: ./infrastructure
+        uses: hashicorp/setup-actions@master
         with:
+          tf_actions_subcommand: 'init'
+          tf_actions_working_dir: './infrastructure'
           TF_VAR_environment: 'dev'
 
       - name: Terraform Format
-        run: terraform fmt -check
-        working-directory: ./infrastructure
+        uses: hashicorp/setup-actions@master
+        with:
+          tf_actions_subcommand: 'fmt -check'
+          tf_actions_working_dir: './infrastructure'
+          TF_VAR_environment: 'dev'
 
       - name: Terraform Plan
-        run: terraform plan
-        working-directory: ./infrastructure
+        uses: hashicorp/setup-actions@master
+        with:
+          tf_actions_subcommand: 'plan'
+          tf_actions_working_dir: './infrastructure'
+          TF_VAR_environment: 'dev'
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
-        working-directory: ./infrastructure
+        uses: hashicorp/setup-actions@master
+        with:
+          tf_actions_subcommand: 'apply -auto-approve'
+          tf_actions_working_dir: './infrastructure'
+          TF_VAR_environment: 'dev'
