--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -31,37 +31,17 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform init
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: './infrastructure'
-          tf_actions_version: 0.12.13
-        env:
-          TF_VAR_environment: 'dev'
+        run: terraform init
+        working-directory: ./infrastructure/environments/dev
 
       - name: Terraform Format
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_subcommand: 'fmt -check'
-          tf_actions_working_dir: './infrastructure'
-          tf_actions_version: 0.12.13
-        env:
-          TF_VAR_environment: 'dev'
+        run: terraform fmt -check
+        working-directory: ./infrastructure/environments/dev
 
       - name: Terraform Plan
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: './infrastructure'
-          tf_actions_version: 0.12.13
-        env:
-          TF_VAR_environment: 'dev'
+        run: terraform plan
+        working-directory: ./infrastructure/environments/dev
 
       - name: Terraform Apply
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_subcommand: 'apply -auto-approve'
-          tf_actions_working_dir: './infrastructure'
-          tf_actions_version: 0.12.13
-        env:
-          TF_VAR_environment: 'dev'
+        run: terraform apply -auto-approve
+        working-directory: ./infrastructure/environments/dev
