--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -23,7 +23,6 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{secrets.AZUIRE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZUIRE_TENANT_ID}}
       TF_LOG: "TRACE"
-      environment: "Dev"
 
     steps:
       - uses: actions/checkout@v3
@@ -33,6 +32,7 @@ jobs:
 
       - name: Terraform init
         run: terraform init
+          -var "environment=\"dev\""
         working-directory: ./infrastructure
 
       - name: Terraform Format
