--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -27,6 +27,7 @@ jobs:
       TF_VAR_env: dev
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
 
+
     steps:
       - uses: actions/checkout@v3
 
@@ -44,3 +45,41 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve
         working-directory: ./infrastructure/environments/dev
+
+  build-and-push: 
+    name: Build and push
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup-node-js
+        uses: actions/setup-node@v3
+        with:
+          cache: npm
+
+      - name: npm install
+        run: |
+          npm install
+
+      - name: Upload atrifact for deployment
+        uses: actions/upload-artifact@v3
+        with:
+          name: lol-scout-api
+          path: ./api
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    environment:
+      name: 'dev'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+    - name: Download artifact from build jobs
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+      with:
+        app-name: devlolscoutwa01
+        publish-profile: ${{ secrets.AZUIRE_PUBLISH_PROFILE }}
+        package: ./api
