--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Setup-node-js
         uses: actions/setup-node@v3
         with:
+          working-directory: ./api
           cache: npm
 
       - name: npm install
