--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -17,6 +17,7 @@ jobs:
 
   terraform:
     runs-on: ubuntu-latest
+    needs: tests
     environment: dev
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
@@ -49,6 +50,7 @@ jobs:
   build-and-push: 
     name: Build and push
     runs-on: ubuntu-latest
+    needs: terraform
     environment: dev
     steps:
       - uses: actions/checkout@v3
