--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -28,7 +28,6 @@ jobs:
       TF_VAR_env: dev
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
 
-
     steps:
       - uses: actions/checkout@v3
 
@@ -36,27 +35,7 @@ jobs:
         uses: ./.github/actions/terraform
         with:
           workingDirectory: infrastructure/environments/dev
-
-      # - name: Setup Terraform
-      #   uses: hashicorp/setup-terraform@v1
-
-      # - name: Terraform init
-      #   run: terraform init
-      #   working-directory: ./infrastructure/environments/dev
-
-      # - name: Terraform Plan
-      #   run: terraform plan
-      #   working-directory: ./infrastructure/environments/dev
-
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve
-      #   working-directory: ./infrastructure/environments/dev
-
-  build-and-push: 
-    name: Build and push
-    runs-on: ubuntu-latest
-    needs: terraform
-    environment: dev
+        
     steps:
       - uses: actions/checkout@v3
 
@@ -90,5 +69,5 @@ jobs:
       uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
       with:
         app-name: devlolscoutwa01
-        publish-profile: ${{ secrets.AZUIRE_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
 
