--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -35,7 +35,11 @@ jobs:
         uses: ./.github/actions/terraform
         with:
           workingDirectory: infrastructure/environments/dev
-        
+  
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: terraform
+    environment: dev      
     steps:
       - uses: actions/checkout@v3
 
