--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -35,18 +35,19 @@ jobs:
         uses: ./.github/actions/terraform
         with:
           workingDirectory: infrastructure/environments/dev
-  
+
   build-and-push:
     runs-on: ubuntu-latest
     needs: terraform
-    environment: dev      
+    environment: dev
     steps:
       - uses: actions/checkout@v3
 
       - name: Setup-node-js
         uses: actions/setup-node@v3
         with:
-          cache-dependency-path: ./api
+          node-version: 16
+          cache-dependency-path: ./api/package-lock.json
           cache: npm
 
       - name: npm install
@@ -70,8 +71,8 @@ jobs:
     steps:
     - name: Download artifact from build jobs
       id: deploy-to-webapp
-      uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+      uses: azure/webapps-deploy@v2
       with:
         app-name: devlolscoutwa01
-        publish-profile: ${{ secrets.AZUIRE_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
 
