--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -20,10 +20,10 @@ jobs:
     needs: tests
     environment: dev
     env:
-      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
-      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
-      ARM_SUBSCRIPTION_ID: ${{secrets.AZUIRE_SUBSCRIPTION_ID}}
-      ARM_TENANT_ID: ${{secrets.AZUIRE_TENANT_ID}}
+      TF_VAR_client_id: ${{secrets.AZURE_CLIENT_ID}}
+      TF_VAR_client_secret: ${{secrets.AZURE_CLIENT_SECRET}}
+      TF_VAR_subscription_id: ${{secrets.AZUIRE_SUBSCRIPTION_ID}}
+      TF_VAR_tenant_id: ${{secrets.AZUIRE_TENANT_ID}}
       # TF_LOG: "TRACE"
       TF_VAR_env: dev
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
