--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -38,7 +38,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
-    needs: terraform
+    # needs: terraform
     environment: dev
     steps:
       - uses: actions/checkout@v3
@@ -63,7 +63,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    # needs: build-and-push
     environment:
       name: 'dev'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
