--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -17,7 +17,7 @@ jobs:
 
   terraform:
     runs-on: ubuntu-latest
-    needs: tests
+    # needs: tests
     environment: dev
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
