--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -15,51 +15,50 @@ jobs:
   #       with:
   #         workingDirectory: api
 
-  terraform:
-    runs-on: ubuntu-latest
-    # needs: tests
-    environment: dev
-    env:
-      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
-      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
-      ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-      ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
-      # TF_LOG: "TRACE"
-      TF_VAR_env: dev
-      TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Run Terraform
-        uses: ./.github/actions/terraform
-        with:
-          workingDirectory: infrastructure/environments/dev
-
-  # build:
+  # terraform:
   #   runs-on: ubuntu-latest
-  #   # needs: terraform
+  #   # needs: tests
   #   environment: dev
+  #   env:
+  #     ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+  #     ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+  #     ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+  #     ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+  #     # TF_LOG: "TRACE"
+  #     TF_VAR_env: dev
+  #     TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
+
   #   steps:
   #     - uses: actions/checkout@v3
 
-  #     - name: Setup-node-js
-  #       uses: actions/setup-node@v3
+  #     - name: Run Terraform
+  #       uses: ./.github/actions/terraform
   #       with:
-  #         node-version: 16
-  #         cache-dependency-path: ./api/package-lock.json
-  #         cache: npm
+  #         workingDirectory: infrastructure/environments/dev
 
-  #     - name: npm install
-  #       run: |
-  #         npm install
-  #       working-directory: ./api
+  build:
+    runs-on: ubuntu-latest
+    # needs: terraform
+    environment: dev
+    steps:
+      - name: AZ Login
+        uses: azure/login@v1
+        with:
+          creds: '{"clientId":"${{secrets.AZURE_CLIENT_ID}}","clientSecret":"${{secrets.AZURE_CLIENT_SECRET}}","subscriptionId":"$${{secrets.AZURE_SUBSCRIPTION_ID}}","tenantId":"${{secrets.AZURE_TENANT_ID}}"}'
 
-  #     # - name: Upload artifact for deployment
-  #     #   uses: actions/upload-artifact@v3
-  #     #   with:
-  #     #     name: lol-scout-api
-  #     #     path: ./api
+      - name: 'Login to Docker Registry'
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{secrets.REGISTRY_LOGIN_SERVER}}
+          username: ${{secrets.AZURE_CLIENT_ID}}
+          password: ${{secrets.AZURE_CLIENT_SECRET}}
+
+      - name: 'Build and push image'
+        shell: bash
+        run: |
+          docker build ./ -t ${{secrets.REGISTRY_LOGIN_SERVER}}/lol-scout-api:${{ github.sha }}
+          docker push ${{secrets.REGISTRY_LOGIN_SERVER}}/lol-scout-api:${{ github.sha }}
+        working-directory: ./api
 
   # deploy:
   #   runs-on: ubuntu-latest
