--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -44,7 +44,7 @@ jobs:
       - name: AZ Login
         uses: azure/login@v1
         with:
-          creds: '{"clientId":"${{secrets.AZURE_CLIENT_ID}}","clientSecret":"${{secrets.AZURE_CLIENT_SECRET}}","subscriptionId":"$${{secrets.AZURE_SUBSCRIPTION_ID}}","tenantId":"${{secrets.AZURE_TENANT_ID}}"}'
+          creds: '{"clientId":"${{secrets.AZURE_CLIENT_ID}}","clientSecret":"${{secrets.AZURE_CLIENT_SECRET}}","subscriptionId":"${{secrets.AZURE_SUBSCRIPTION_ID}}","tenantId":"${{secrets.AZURE_TENANT_ID}}"}'
 
       - name: 'Login to Docker Registry'
         uses: azure/docker-login@v1
