--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -41,6 +41,7 @@ jobs:
     # needs: terraform
     environment: dev
     steps:
+      - uses: actions/checkout@v3
       - name: AZ Login
         uses: azure/login@v1
         with:
