--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -4,41 +4,41 @@ on:
   workflow_dispatch:
 
 jobs:
-  # tests:
-  #   name: Run Tests
-  #   runs-on: ubuntu-latest
-  #   environment: dev
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Run Tests
-  #       uses: ./.github/actions/test
-  #       with:
-  #         workingDirectory: api
+  tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/actions/test
+        with:
+          workingDirectory: api
 
-  # terraform:
-  #   runs-on: ubuntu-latest
-  #   # needs: tests
-  #   environment: dev
-  #   env:
-  #     ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
-  #     ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
-  #     ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-  #     ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
-  #     # TF_LOG: "TRACE"
-  #     TF_VAR_env: dev
-  #     TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
+  terraform:
+    runs-on: ubuntu-latest
+    needs: tests
+    environment: dev
+    env:
+      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+      ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+      # TF_LOG: "TRACE"
+      TF_VAR_env: dev
+      TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Run Terraform
-  #       uses: ./.github/actions/terraform
-  #       with:
-  #         workingDirectory: infrastructure/environments/dev
+      - name: Run Terraform
+        uses: ./.github/actions/terraform
+        with:
+          workingDirectory: infrastructure/environments/dev
 
   build:
     runs-on: ubuntu-latest
-    # needs: terraform
+    needs: terraform
     environment: dev
     steps:
       - uses: actions/checkout@v3
@@ -66,20 +66,4 @@ jobs:
         with:
           app-name: devlolscoutwa01
           images: ${{secrets.REGISTRY_LOGIN_SERVER}}/lol-scout-api:${{ github.sha }}
-
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   environment:
-  #     name: 'dev'
-  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-  #   steps:
-  #   - name: Deploy to Azure WebApp
-  #     id: deploy-to-webapp
-  #     uses: azure/webapps-deploy@v2
-  #     with:
-  #       app-name: devlolscoutwa01
-  #       publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-  #       # package: ./api
 
