--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -65,5 +65,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: devlolscoutwa01
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           images: ${{secrets.REGISTRY_LOGIN_SERVER}}/lol-scout-api:${{ github.sha }}
 
