--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -38,7 +38,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    # needs: terraform
+    needs: terraform
     environment: dev
     steps:
       - uses: actions/checkout@v3
