--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,12 +1,7 @@
 name: TEST - CI
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-      branches:
-        - main
+  workflow_dispatch:
 
 jobs:
   tests:
@@ -19,3 +14,45 @@ jobs:
         uses: ./.github/actions/test
         with:
           workingDirectory: api
+
+  terraform:
+    name: Deploy Infrastructure
+    runs-on: ubuntu-latest
+    needs: tests
+    environment: test
+    env:
+      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+      ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+      # TF_LOG: "TRACE"
+      TF_VAR_env: test
+      TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Run Terraform
+        uses: ./.github/actions/terraform
+        with:
+          workingDirectory: infrastructure/environments/test
+
+  deploy-api:
+    name: Deploy API
+    runs-on: ubuntu-latest
+    needs: terraform
+    environment: test
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/deploy
+        with:
+          workingDirectory: api
+          clientId: ${{secrets.AZURE_CLIENT_ID}}
+          clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
+          subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          tenantId: ${{secrets.AZURE_TENANT_ID}}
+          loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
+          commitHash: ${{ github.sha }}
+          publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          appName: testlolscoutwa01
+          imageName: lol-scout-api
