--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -2,10 +2,11 @@ name: DEV - CI
 
 on:
   workflow_dispatch:
+    
 
 jobs:
-  tests:
-    name: Run Tests
+  unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     environment: dev
     steps:
@@ -14,11 +15,23 @@ jobs:
         uses: ./.github/actions/test
         with:
           workingDirectory: api
+  
+  terraform-plan:
+    name: Run Terraform Plan
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/actions/terraform-plan
+        with:
+          workingDirectory: infrastructure/environments/dev
 
-  terraform:
+
+  terraform-apply:
     name: Deploy Infrastructure
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [unit-tests, terraform-plan]
     environment: dev
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
@@ -33,14 +46,14 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run Terraform
-        uses: ./.github/actions/terraform
+        uses: ./.github/actions/terraform-apply
         with:
           workingDirectory: infrastructure/environments/dev
 
   deploy-api:
     name: Deploy API
     runs-on: ubuntu-latest
-    needs: terraform
+    needs: terraform-apply
     environment: dev
     steps:
       - uses: actions/checkout@v3
@@ -56,5 +69,5 @@ jobs:
           publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           appName: devlolscoutwa01
           imageName: lol-scout-api
-          
+
 
