--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,11 +1,16 @@
 name: TEST - CI
 
 on:
-  workflow_dispatch:
+  pull_request: 
+    branches: 
+      - main
+  push: 
+    branches:
+      - main
 
 jobs:
-  tests:
-    name: Run Tests
+  unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     environment: test
     steps:
@@ -14,12 +19,25 @@ jobs:
         uses: ./.github/actions/test
         with:
           workingDirectory: api
+  
+  terraform-plan:
+    name: Run Terraform Plan
+    runs-on: ubuntu-latest
+    environment: test
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/actions/terraform-plan
+        with:
+          workingDirectory: infrastructure/environments/test
 
-  terraform:
+
+  terraform-apply:
     name: Deploy Infrastructure
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [unit-tests, terraform-plan]
     environment: test
+    if: ${{ github.event_name == 'push' }}
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
       ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
@@ -33,15 +51,16 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run Terraform
-        uses: ./.github/actions/terraform
+        uses: ./.github/actions/terraform-apply
         with:
           workingDirectory: infrastructure/environments/test
 
   deploy-api:
     name: Deploy API
     runs-on: ubuntu-latest
-    needs: terraform
+    needs: terraform-apply
     environment: test
+    if: ${{ github.event_name == 'push' }}
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/deploy
