only deploy on push

--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -59,6 +59,7 @@ jobs:
     name: Deploy API
     runs-on: ubuntu-latest
     needs: terraform-apply
+    if: ${{ github.event_name == 'push' }}
     environment: prod
     steps:
       - uses: actions/checkout@v3
