--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -24,6 +24,14 @@ jobs:
     name: Run Terraform Plan
     runs-on: ubuntu-latest
     environment: test
+    env:
+      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+      ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+      # TF_LOG: "TRACE"
+      TF_VAR_env: test
+      TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
