--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -1,16 +1,16 @@
 name: PROD - CI
 
 on:
-  push:
+  pull_request: 
+    branches: 
+      - prod
+  push: 
     branches:
-      - Prod
-  pull_request:
-      branches:
-        - Prod
+      - prod
 
 jobs:
-  tests:
-    name: Run Tests
+  unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     environment: prod
     steps:
@@ -19,3 +19,67 @@ jobs:
         uses: ./.github/actions/test
         with:
           workingDirectory: api
+  
+  terraform-plan:
+    name: Run Terraform Plan
+    runs-on: ubuntu-latest
+    environment: prod
+    env:
+      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+      ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+      # TF_LOG: "TRACE"
+      TF_VAR_env: prod
+      TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/actions/terraform-plan
+        with:
+          workingDirectory: infrastructure/environments/prod
+
+
+  terraform-apply:
+    name: Deploy Infrastructure
+    runs-on: ubuntu-latest
+    needs: [unit-tests, terraform-plan]
+    environment: prod
+    if: ${{ github.event_name == 'push' }}
+    env:
+      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+      ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+      # TF_LOG: "TRACE"
+      TF_VAR_env: prod
+      TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Run Terraform
+        uses: ./.github/actions/terraform-apply
+        with:
+          workingDirectory: infrastructure/environments/prod
+
+  deploy-api:
+    name: Deploy API
+    runs-on: ubuntu-latest
+    needs: terraform-apply
+    if: ${{ github.event_name == 'push' }}
+    environment: prod
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/deploy
+        with:
+          workingDirectory: api
+          clientId: ${{secrets.AZURE_CLIENT_ID}}
+          clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
+          subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          tenantId: ${{secrets.AZURE_TENANT_ID}}
+          loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
+          commitHash: ${{ github.sha }}
+          publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          appName: prodlolscoutwa01
+          imageName: lol-scout-api
