--- a/web/package.json
+++ b/web/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "next": "latest",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
