--- a/web/package.json
+++ b/web/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.2.0",
     "next": "latest",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
   },
