--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "chart.js": "^4.2.0",
     "next": "latest",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-aria": "^3.22.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
